--- a/public/css/blocks/popup.css
+++ b/public/css/blocks/popup.css
@@ -1,5 +1,4 @@
 .popup {
-  display: none;
   position: absolute;
   z-index: 3;
   top: 0;
@@ -131,6 +130,11 @@
   margin-bottom: 16px;
   background-color: var(--disabled-bg);
   border-radius: 4px;
+}
+
+#map {
+  width: 100%;
+  height: 200px;
 }
 
 .popup__address {
