--- a/public/css/blocks/results.css
+++ b/public/css/blocks/results.css
@@ -38,3 +38,28 @@
   margin-top: 30px;
 }
 
+.results__info p {
+  width: 58%;
+  margin: 0 0 20px;
+  color: var(--disabled-blue);
+  text-align: center;
+}
+
+.results__info--empty-block {
+  display: flex;
+  padding-top: 30px;
+
+  flex-direction: column;
+  align-items: center;
+}
+
+.results__empty-message {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.75;
+}
+
+.results____notion {
+  font-weight: 400;
+  line-height: 1.57;
+}
