--- a/public/css/blocks/product.css
+++ b/public/css/blocks/product.css
@@ -12,6 +12,7 @@
 }
 
 .product__image {
+  cursor: pointer;
   position: relative;
 }
 
@@ -30,7 +31,13 @@
   font-weight: 600;
   color: var(--white);
   background-color: var(--popup-overlay);
-  border-radius: 4px 0px 0px 4px;
+  border-radius: 4px 0 0 4px;
+}
+
+.product__image img {
+  width: 318px;
+  height: 100%;
+  object-fit: cover;
 }
 
 .product__image-more-photo--active {
@@ -39,25 +46,37 @@
 
 .product__image-navigation {
   position: absolute;
-  bottom: 5px;
+  top: 0;
   width: 100%;
-  display: flex;
+  height: 100%;
   padding: 0 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  z-index: 2;
 }
 
-.product__navigation-item {
-  display: block;
-  height: 4px;
-  width: calc(100% / 5);
+.product__navigation-column {
+  position: relative;
+  bottom: 5px;
+  height: 100%;
+  flex-basis: 100%;
+}
+
+.product__navigation-column span {
+  position: absolute;
+  bottom: 0;
+  height: 3px;
+  width: 100%;
   background-color: var(--disabled-bg);
   opacity: 0.25;
 }
 
-.product__navigation-item:not(:last-of-type) {
+.product__navigation-column span:not(:last-of-type) {
   margin-right: 2px;
 }
 
-.product__navigation-item--active {
+.product__navigation-column:hover span {
   opacity: 1;
 }
 
